--- a/style.css
+++ b/style.css
@@ -114,7 +114,8 @@ body {
     font-size: 0.79rem;
 }
 
-.about .card {
+.about .card,
+.projects .card {
     box-shadow: var(--shadow);
 }
 
@@ -124,10 +125,26 @@ body {
     color: white;
 }
 
+.gallery img{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    box-shadow: 0 0 0 #0000;
+    /* filter:sepia(80%) hue-rotate(180deg); */
+    opacity: 0.67;  
+    transition: all 0.15s cubic-bezier(0.3, 0.1, 0.3, 0.85);
+}
 
-
-
-
+.gallery img:hover{
+    z-index: 1;
+    transform: scale(1.2);
+    border-radius: 5px;
+    box-shadow: 1em 1em 1em #0004;
+    /* filter: sepia(0%) hue-rotate(0deg); */
+    opacity: 1;
+    transition: all 0.3s cubic-bezier(0.3, 0.1, 0.3, 0.85);
+}
 
 
 @media (max-width: 1200px) {}
@@ -137,8 +154,6 @@ body {
     html {
         font-size: 75%;
     }
-
-
 }
 
 /* Tablet */
@@ -146,8 +161,6 @@ body {
     html {
         font-size: 65%;
     }
-
-
 }
 
 /* Mobile Phone */
