--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body {
     /* background-color: #666; */
     color: var(--bg);
     /* color: #FFE002; */
+    /* background-image: url(img/circle.png);
+    background-size:1500px; */
+    /* background-position: center; */
+    /* background-repeat: no-repeat; */
 }
 
 .about,
@@ -119,8 +123,10 @@ body {
 }
 
 .about .card,
-.projects .card {
+.projects .card,
+.social .card {
     box-shadow: var(--shadow);
+    border-radius: 10px ;
 }
 
 .gallery,
@@ -131,7 +137,7 @@ body {
 
 
 .gallery img {
-    border-radius: 50px 100px;
+    border-radius: 10px 100px;
     position: relative;
     width: 100%;
     height: 100%;
@@ -157,9 +163,10 @@ footer a,
 footer p {
     background-color: none;
     color: var(--bg);
-    text-decoration: solid;
-    font-weight: bold;
+    text-decoration: none;
+    /* font-weight: bold; */
     padding-bottom: 7rem;
+    font-family: 'Work sans', sans-serif;
 }
 
 
@@ -193,6 +200,12 @@ footer p {
 
     .line {
         font-size: 2rem;
-
     }
+
+    .gallery .col {
+        /* position: center; */
+    /* height: 100%; */
+        width: 80%;
+    }
+
 }
