--- a/style.css
+++ b/style.css
@@ -12,9 +12,9 @@ body {
     /* background-size: 100rem; */
     /* background-position: center; */
     /* background-repeat: no-repeat; */
-    /* background: #ff00cc; */
-    background: -webkit-linear-gradient(to right, #333399, #ff00cc);
-    background: linear-gradient(to right, #333399, #ff00cc);
+    /* background: #ECDFCC; */
+    /* background: -webkit-linear-gradient(to right, #333399, #ff00cc); */
+    background: linear-gradient(to right, #2D3250, #7077A1);
 }
 
 ::-webkit-scrollbar{
