--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     /* background: #ECDFCC; */
     /* background: -webkit-linear-gradient(to right, #333399, #ff00cc); */
     background: linear-gradient(to right, #2D3250, #7077A1);
+    /* background: linear-gradient(to right, #A5C9CA, #E7F6F2); */
 }
 
 ::-webkit-scrollbar{
@@ -146,6 +147,7 @@ body {
 .about .card,
 .projects .card,
 .social .card {
+    border-radius: 10px;
     box-shadow: var(--shadow);
     /* border-radius: 10px 25px; */
     background-color: rgba(255, 255, 255, 0.4) !important;
