--- a/style.css
+++ b/style.css
@@ -14,9 +14,78 @@ body {
     /* background-repeat: no-repeat; */
     /* background: #ECDFCC; */
     /* background: -webkit-linear-gradient(to right, #333399, #ff00cc); */
-    background: linear-gradient(to right, #2D3250, #7077A1);
-    /* background: linear-gradient(to right, #A5C9CA, #E7F6F2); */
+    
+    background: linear-gradient(to right, #A5C9CA, #E7F6F2);
+    transition: background-color 0.3s, color 0.3s;
 }
+
+/* dark mode */
+
+body.dark{
+    background: linear-gradient(to right, #2D3250, #7077A1);
+}
+
+/* .switch {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    display: flex;
+    align-items: center;
+}
+
+.switch input[type="checkbox"] {
+    display: none;
+}
+
+.switch label {
+    cursor: pointer;
+    padding: 5px;
+} */
+
+.checkbox {
+	opacity: 0;
+	position: absolute;
+}
+
+.label {
+	background-color: #111;
+	border-radius: 50px;
+	cursor: pointer;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 5px;
+	position: relative;
+	height: 26px;
+	width: 50px;
+	transform: scale(1.5);
+}
+
+.label .ball {
+	background-color: #fff;
+	border-radius: 50%;
+	position: absolute;
+	top: 2px;
+	left: 2px;
+	height: 22px;
+	width: 22px;
+	transform: translateX(0px);
+	transition: transform 0.2s linear;
+}
+
+.checkbox:checked + .label .ball {
+	transform: translateX(24px);
+}
+
+
+.fa-moon {
+	color: #f1c40f;
+}
+
+.fa-sun {
+	color: #f39c12;
+}
+
 
 ::-webkit-scrollbar{
     width: 0px;
